...
        />

    <TextView
        android:id="@+id/login_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_below="@+id/login_app_logo"
        android:layout_centerHorizontal="true"
        android:textSize="28dp"

        />

    <EditText
        android:id="@+id/login_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_login_text"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputs_text"
        android:layout_marginLeft="30dp"
...
        android:textCursorDrawable= "@drawable/cursor_color"


        />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_phone_number_input"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs_text"
        android:layout_marginLeft="30dp"
...
        android:textColor="@color/colorPrimary"

        android:textStyle="bold" />

    <Button

        android:id="@+id/login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
...
