...

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_home" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/cart"
        android:tint="@android:color/white"/>
...
